# Leakage-Emergence

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
figures/: figure_captions.tex
scripts/: generate_figures.py  run_linear_examples.py  run_nonlinear_examples.py
src/leakage_emergence/: __init__.py  dynamics.py  experiments.py  nonlinear.py  observables.py  operators.py  plotting.py  spaces.py  theory_checks.py  utils.py
tests/: conftest.py  test_block_operators.py  test_duhamel_identity.py  test_energy_scaling.py  test_exact_hiddenness.py  test_first_order_emergence.py  test_nonlinear_cases.py  test_plotting_outputs.py  test_projectors.py  test_resolvent_leakage.py  test_spectral_hiddenness.py  test_threshold_detection.py
